// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ListOfPublishedProfiles limits the number of rendered profiles with the limit prop 1`] = `
<div>
  <ul
    class="publishedProfilesList"
  >
    <li
      class="publishedProfilesListItem"
    >
      <a
        class="publishedProfilesLink"
        href="/public/MACOSX/marker-chart/"
        title="Click here to load profile ⁨MacOS X profile⁩"
      >
        <div
          class="publishedProfilesDate"
        >
          Jul 5, 2020
        </div>
        <div
          class="publishedProfilesInfo"
        >
          <div
            class="publishedProfilesName"
          >
            <strong>
              MacOS X profile
            </strong>
             (
            38.0s
            )
          </div>
          <div
            class="profileMetaInfoSummary"
          >
            <div
              class="profileMetaInfoSummaryProductAndVersion"
              data-product="Firefox"
            >
              Firefox 62
            </div>
            <div
              class="profileMetaInfoSummaryPlatform"
              data-toolkit="macOS 10.12"
            >
              macOS 10.12
            </div>
          </div>
        </div>
      </a>
    </li>
    <li
      class="publishedProfilesListItem"
    >
      <a
        class="publishedProfilesLink"
        href="/public/0123456789/"
        title="Click here to load profile ⁨#012345⁩"
      >
        <div
          class="publishedProfilesDate"
        >
          2:00 PM
        </div>
        <div
          class="publishedProfilesInfo"
        >
          <div
            class="publishedProfilesName"
          >
            <strong>
              Profile #012345
            </strong>
             (
            2.0s
            )
          </div>
          <div
            class="profileMetaInfoSummary"
          >
            <div
              class="profileMetaInfoSummaryProductAndVersion"
              data-product="Fennec"
            >
              Fennec
            </div>
            <div
              class="profileMetaInfoSummaryPlatform"
              data-toolkit=""
            />
          </div>
        </div>
      </a>
    </li>
    <li
      class="publishedProfilesListItem"
    >
      <a
        class="publishedProfilesLink"
        href="/public/WINDOWS/marker-chart/"
        title="Click here to load profile ⁨Another good profile⁩"
      >
        <div
          class="publishedProfilesDate"
        >
          1:00 PM
        </div>
        <div
          class="publishedProfilesInfo"
        >
          <div
            class="publishedProfilesName"
          >
            <strong>
              Another good profile
            </strong>
             (
            38.0s
            )
          </div>
          <div
            class="profileMetaInfoSummary"
          >
            <div
              class="profileMetaInfoSummaryProductAndVersion"
              data-product="Firefox"
            >
              Firefox 77
            </div>
            <div
              class="profileMetaInfoSummaryPlatform"
              data-toolkit="Windows 10"
            >
              Windows 10
            </div>
          </div>
        </div>
      </a>
    </li>
  </ul>
  <p>
    <a
      href="/uploaded-recordings/"
    >
      See and manage all your recordings (⁨2⁩ more)
    </a>
  </p>
</div>
`;

exports[`ListOfPublishedProfiles profile deletion can delete profiles 1`] = `
<div
  class="arrowPanelContent"
>
  <div
    class="confirmDialog"
  >
    <h2
      class="confirmDialogTitle"
    >
      Delete ⁨Profile #012345⁩
    </h2>
    <div
      class="confirmDialogContent"
    >
      Are you sure you want to delete uploaded data for this profile? Links
that were previously shared will no longer work.
    </div>
    <div
      class="confirmDialogButtons"
    >
      <input
        class="photon-button photon-button-default"
        type="button"
        value="Cancel"
      />
      <input
        class="photon-button photon-button-destructive"
        type="button"
        value="Delete"
      />
    </div>
  </div>
</div>
`;

exports[`ListOfPublishedProfiles profile deletion renders a generic message when the final profile on the list has been deleted 1`] = `
<div
  class="arrowPanelContent"
>
  <div
    class="confirmDialog"
  >
    <h2
      class="confirmDialogTitle"
    >
      Delete ⁨Profile #012345⁩
    </h2>
    <div
      class="confirmDialogContent"
    >
      Are you sure you want to delete uploaded data for this profile? Links
that were previously shared will no longer work.
    </div>
    <div
      class="confirmDialogButtons"
    >
      <input
        class="photon-button photon-button-default"
        type="button"
        value="Cancel"
      />
      <input
        class="photon-button photon-button-destructive"
        type="button"
        value="Delete"
      />
    </div>
  </div>
</div>
`;

exports[`ListOfPublishedProfiles renders a generic message when there is no profiles 1`] = `
<div>
  <p
    class="photon-body-30"
  >
    No profile has been uploaded yet!
  </p>
</div>
`;

exports[`ListOfPublishedProfiles renders action buttons when appropriate 1`] = `
<div>
  <ul
    class="publishedProfilesList"
  >
    <li
      class="publishedProfilesListItem"
    >
      <a
        class="publishedProfilesLink"
        href="/public/MACOSX/marker-chart/"
        title="Click here to load profile ⁨MacOS X profile⁩"
      >
        <div
          class="publishedProfilesDate"
        >
          Jul 5, 2020
        </div>
        <div
          class="publishedProfilesInfo"
        >
          <div
            class="publishedProfilesName"
          >
            <strong>
              MacOS X profile
            </strong>
             (
            38.0s
            )
          </div>
          <div
            class="profileMetaInfoSummary"
          >
            <div
              class="profileMetaInfoSummaryProductAndVersion"
              data-product="Firefox"
            >
              Firefox 62
            </div>
            <div
              class="profileMetaInfoSummaryPlatform"
              data-toolkit="macOS 10.12"
            >
              macOS 10.12
            </div>
          </div>
        </div>
      </a>
      <div
        class="publishedProfilesActionButtons"
      >
        <button
          class="publishedProfilesDeleteButton photon-button photon-button-default"
          disabled=""
          title="This profile cannot be deleted because we lack the authorization information."
          type="button"
        >
          Delete
        </button>
      </div>
    </li>
    <li
      class="publishedProfilesListItem"
    >
      <a
        class="publishedProfilesLink"
        href="/public/0123456789/"
        title="Click here to load profile ⁨#012345⁩"
      >
        <div
          class="publishedProfilesDate"
        >
          2:00 PM
        </div>
        <div
          class="publishedProfilesInfo"
        >
          <div
            class="publishedProfilesName"
          >
            <strong>
              Profile #012345
            </strong>
             (
            2.0s
            )
          </div>
          <div
            class="profileMetaInfoSummary"
          >
            <div
              class="profileMetaInfoSummaryProductAndVersion"
              data-product="Fennec"
            >
              Fennec
            </div>
            <div
              class="profileMetaInfoSummaryPlatform"
              data-toolkit=""
            />
          </div>
        </div>
      </a>
      <div
        class="publishedProfilesActionButtons"
      >
        <div
          class="buttonWithPanel"
        >
          <button
            aria-expanded="false"
            class="buttonWithPanelButton publishedProfilesDeleteButton photon-button photon-button-default"
            title="Click here to delete the profile ⁨#012345⁩"
            type="button"
          >
            Delete
          </button>
        </div>
      </div>
    </li>
    <li
      class="publishedProfilesListItem"
    >
      <a
        class="publishedProfilesLink"
        href="/public/WINDOWS/marker-chart/"
        title="Click here to load profile ⁨Another good profile⁩"
      >
        <div
          class="publishedProfilesDate"
        >
          1:00 PM
        </div>
        <div
          class="publishedProfilesInfo"
        >
          <div
            class="publishedProfilesName"
          >
            <strong>
              Another good profile
            </strong>
             (
            38.0s
            )
          </div>
          <div
            class="profileMetaInfoSummary"
          >
            <div
              class="profileMetaInfoSummaryProductAndVersion"
              data-product="Firefox"
            >
              Firefox 77
            </div>
            <div
              class="profileMetaInfoSummaryPlatform"
              data-toolkit="Windows 10"
            >
              Windows 10
            </div>
          </div>
        </div>
      </a>
      <div
        class="publishedProfilesActionButtons"
      >
        <button
          class="publishedProfilesDeleteButton photon-button photon-button-default"
          disabled=""
          title="This profile cannot be deleted because we lack the authorization information."
          type="button"
        >
          Delete
        </button>
      </div>
    </li>
    <li
      class="publishedProfilesListItem"
    >
      <a
        class="publishedProfilesLink"
        href="/public/ABCDEFGHI/"
        title="Click here to load profile ⁨Layout profile⁩"
      >
        <div
          class="publishedProfilesDate"
        >
          Jul 3, 8:00 AM
        </div>
        <div
          class="publishedProfilesInfo"
        >
          <div
            class="publishedProfilesName"
          >
            <strong>
              Layout profile
            </strong>
             (
            0.0s
            )
          </div>
          <div
            class="profileMetaInfoSummary"
          >
            <div
              class="profileMetaInfoSummaryProductAndVersion"
              data-product="Firefox"
            >
              Firefox 68
            </div>
            <div
              class="profileMetaInfoSummaryPlatform"
              data-toolkit="Linux"
            >
              Linux
            </div>
          </div>
        </div>
      </a>
      <div
        class="publishedProfilesActionButtons"
      >
        <button
          class="publishedProfilesDeleteButton photon-button photon-button-default"
          disabled=""
          title="This profile cannot be deleted because we lack the authorization information."
          type="button"
        >
          Delete
        </button>
      </div>
    </li>
    <li
      class="publishedProfilesListItem"
    >
      <a
        class="publishedProfilesLink"
        href="/public/123abc456/calltree/?globalTrackOrder=0-1-2-3-4-5-6-7-8-9-10&hiddenGlobalTracks=1-2-3-4-5-6-7-8-9&localTrackOrderByPid=32027-1-2-0~12629-0~12149-0~11755-0~11945-0~12533-0~11798-0~11862-0~12083-0~12118-0~12298-0-1~&search=bla&thread=11&v=5"
        title="Click here to load profile ⁨#123abc⁩"
      >
        <div
          class="publishedProfilesDate"
        >
          May 20, 2018
        </div>
        <div
          class="publishedProfilesInfo"
        >
          <div
            class="publishedProfilesName"
          >
            <strong>
              Profile #123abc
            </strong>
             (
            0.0s
            )
          </div>
          <div
            class="profileMetaInfoSummary"
          >
            <div
              class="profileMetaInfoSummaryProductAndVersion"
              data-product="Firefox Preview"
            >
              Firefox Preview 80
            </div>
            <div
              class="profileMetaInfoSummaryPlatform"
              data-toolkit="Android 7"
            >
              Android 7
            </div>
          </div>
        </div>
      </a>
      <div
        class="publishedProfilesActionButtons"
      >
        <button
          class="publishedProfilesDeleteButton photon-button photon-button-default"
          disabled=""
          title="This profile cannot be deleted because we lack the authorization information."
          type="button"
        >
          Delete
        </button>
      </div>
    </li>
  </ul>
</div>
`;

exports[`ListOfPublishedProfiles still displays the link to all recordings when there is 3 profiles or less 1`] = `
<div>
  <ul
    class="publishedProfilesList"
  >
    <li
      class="publishedProfilesListItem"
    >
      <a
        class="publishedProfilesLink"
        href="/public/0123456789/"
        title="Click here to load profile ⁨#012345⁩"
      >
        <div
          class="publishedProfilesDate"
        >
          2:00 PM
        </div>
        <div
          class="publishedProfilesInfo"
        >
          <div
            class="publishedProfilesName"
          >
            <strong>
              Profile #012345
            </strong>
             (
            2.0s
            )
          </div>
          <div
            class="profileMetaInfoSummary"
          >
            <div
              class="profileMetaInfoSummaryProductAndVersion"
              data-product="Fennec"
            >
              Fennec
            </div>
            <div
              class="profileMetaInfoSummaryPlatform"
              data-toolkit=""
            />
          </div>
        </div>
      </a>
    </li>
    <li
      class="publishedProfilesListItem"
    >
      <a
        class="publishedProfilesLink"
        href="/public/ABCDEFGHI/"
        title="Click here to load profile ⁨Layout profile⁩"
      >
        <div
          class="publishedProfilesDate"
        >
          Jul 3, 8:00 AM
        </div>
        <div
          class="publishedProfilesInfo"
        >
          <div
            class="publishedProfilesName"
          >
            <strong>
              Layout profile
            </strong>
             (
            0.0s
            )
          </div>
          <div
            class="profileMetaInfoSummary"
          >
            <div
              class="profileMetaInfoSummaryProductAndVersion"
              data-product="Firefox"
            >
              Firefox 68
            </div>
            <div
              class="profileMetaInfoSummaryPlatform"
              data-toolkit="Linux"
            >
              Linux
            </div>
          </div>
        </div>
      </a>
    </li>
    <li
      class="publishedProfilesListItem"
    >
      <a
        class="publishedProfilesLink"
        href="/public/123abc456/calltree/?globalTrackOrder=0-1-2-3-4-5-6-7-8-9-10&hiddenGlobalTracks=1-2-3-4-5-6-7-8-9&localTrackOrderByPid=32027-1-2-0~12629-0~12149-0~11755-0~11945-0~12533-0~11798-0~11862-0~12083-0~12118-0~12298-0-1~&search=bla&thread=11&v=5"
        title="Click here to load profile ⁨#123abc⁩"
      >
        <div
          class="publishedProfilesDate"
        >
          May 20, 2018
        </div>
        <div
          class="publishedProfilesInfo"
        >
          <div
            class="publishedProfilesName"
          >
            <strong>
              Profile #123abc
            </strong>
             (
            0.0s
            )
          </div>
          <div
            class="profileMetaInfoSummary"
          >
            <div
              class="profileMetaInfoSummaryProductAndVersion"
              data-product="Firefox Preview"
            >
              Firefox Preview 80
            </div>
            <div
              class="profileMetaInfoSummaryPlatform"
              data-toolkit="Android 7"
            >
              Android 7
            </div>
          </div>
        </div>
      </a>
    </li>
  </ul>
  <p>
    <a
      href="/uploaded-recordings/"
    >
      Manage these recordings
    </a>
  </p>
</div>
`;

exports[`ListOfPublishedProfiles still displays the link to all recordings when there is only 1 profile 1`] = `
<div>
  <ul
    class="publishedProfilesList"
  >
    <li
      class="publishedProfilesListItem"
    >
      <a
        class="publishedProfilesLink"
        href="/public/0123456789/"
        title="Click here to load profile ⁨#012345⁩"
      >
        <div
          class="publishedProfilesDate"
        >
          2:00 PM
        </div>
        <div
          class="publishedProfilesInfo"
        >
          <div
            class="publishedProfilesName"
          >
            <strong>
              Profile #012345
            </strong>
             (
            2.0s
            )
          </div>
          <div
            class="profileMetaInfoSummary"
          >
            <div
              class="profileMetaInfoSummaryProductAndVersion"
              data-product="Fennec"
            >
              Fennec
            </div>
            <div
              class="profileMetaInfoSummaryPlatform"
              data-toolkit=""
            />
          </div>
        </div>
      </a>
    </li>
  </ul>
  <p>
    <a
      href="/uploaded-recordings/"
    >
      Manage this recording
    </a>
  </p>
</div>
`;
